apply plugin: 'com.android.application'
apply plugin: 'io.fabric'

android {
    compileSdkVersion 28
    defaultConfig {
        applicationId "com.uren.catchu"
        minSdkVersion 23
        targetSdkVersion 26
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
}

dependencies {
    implementation fileTree(include: ['*.jar'], dir: 'libs')
    implementation 'androidx.appcompat:appcompat:1.0.0'
    implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
    implementation 'com.google.android.material:material:1.0.0-rc01'
    implementation 'androidx.recyclerview:recyclerview:1.0.0'
    implementation 'androidx.core:core:1.0.0'
    implementation 'androidx.vectordrawable:vectordrawable:1.0.0'
    implementation 'androidx.vectordrawable:vectordrawable-animated:1.0.0'
    implementation 'androidx.palette:palette:1.0.0'
    implementation 'androidx.cardview:cardview:1.0.0'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'com.google.ar:core:1.5.0'

    implementation 'com.google.android.gms:play-services-maps:16.0.0'
    implementation 'com.google.android.gms:play-services-location:16.0.0'
    testImplementation 'junit:junit:4.12'
    androidTestImplementation 'androidx.test:runner:1.1.0'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
    implementation 'com.miguelcatalan:materialsearchview:1.4.0'
    implementation 'com.github.bumptech.glide:glide:4.8.0'
    //implementation 'eu.long1:spacetablayout:1.0.4'
    //implementation 'com.github.florent37:bubbletab:1.0.0'
    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.16'
    implementation 'com.github.hani-momanii:SuperNova-Emoji:1.1'
    implementation 'net.danlew:android.joda:2.10.1'
    //implementation 'com.github.Shashank02051997:FancyGifDialog-Android:1.1'
    //**************** MY DEPENDENCIES ******************//
    /*=======UTILS=========*/
    implementation 'com.jakewharton:butterknife:10.1.0'
    annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'

    /*new added*/
    //implementation 'com.squareup.picasso:picasso:2.5.2'
    //implementation 'com.google.android.material:material:1.0.0-beta01'
    //implementation 'com.hendraanggrian:collapsingtoolbarlayout-subtitle:27.1.0'
    /*=======AWS=========*/
    // Mobile Client for initializing the SDK
    implementation('com.amazonaws:aws-android-sdk-mobile-client:2.6.+@aar') { transitive = true }
    // Facebook SignIn
    implementation('com.amazonaws:aws-android-sdk-auth-facebook:2.6.+@aar') { transitive = true }
    // Sign in UI

    implementation('com.amazonaws:aws-android-sdk-auth-ui:2.6.+@aar') { transitive = true }
    // Cognito UserPools for SignIn
    implementation('com.amazonaws:aws-android-sdk-auth-userpools:2.6.+@aar') { transitive = true }
    implementation 'com.amazonaws:aws-android-sdk-s3:2.6.+'
    implementation 'com.amazonaws:aws-android-sdk-cognito:2.6.+'
    implementation 'com.github.aarsy.googlemapsanimations:googlemapsanimations:1.0.5'
    implementation 'com.deep.videotrimmer:videotrimmer:1.0'
    //implementation 'com.henryblue.mxvideoplayer:xvideoplayer:1.1.6'
    //implementation 'id.zelory:compressor:2.1.0'
    //implementation 'com.iceteck.silicompressorr:silicompressor:2.2.1'
    //implementation 'com.github.picnic:FingerPaintView:1.0.0'

    //Http Multipart dependencies
    //implementation 'org.apache.httpcomponents:httpcore:4.4'
    //implementation 'org.apache.httpcomponents:httpmime:4.4'
    //implementation group: 'org.apache.httpcomponents' , name: 'httpclient-android' , version: '4.3.5.1'
    //implementation('org.apache.httpcomponents:httpmime:4.3') {
    //    exclude module: "httpclient"
    //}
    implementation 'com.google.android.exoplayer:exoplayer-core:2.8.0'
    implementation 'com.google.android.exoplayer:exoplayer-ui:2.8.0'

    //Firebase
    implementation 'com.google.firebase:firebase-auth:18.0.0'
    implementation 'com.google.android.gms:play-services-auth:16.0.1'
    implementation 'com.firebase:geofire-android:2.1.2'
    implementation 'com.firebase:firebase-client-android:2.5.0'
    implementation 'com.google.firebase:firebase-invites:17.0.0'
    implementation 'com.google.firebase:firebase-config:18.0.0'
    implementation 'com.google.firebase:firebase-core:17.0.0'
    implementation 'com.google.firebase:firebase-functions:18.0.0'
    implementation 'com.google.firebase:firebase-database:18.0.0'
    implementation 'com.google.firebase:firebase-inappmessaging-display:18.0.1'
    implementation 'com.google.firebase:firebase-messaging:19.0.1'
    implementation 'com.google.firebase:firebase-ads:18.0.0'

    //implementation 'com.google.android.gms:play-services-ads:15.0.1'
    //implementation 'com.google.firebase:firebase-ads:17.1.2'




    //implementation 'com.google.android.gms:play-services-measurement-base:17.0.0'
    //implementation 'com.google.firebase:firebase-dynamic-links:16.1.3'
    implementation 'com.firebase:firebase-jobdispatcher:0.8.5'
    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
    //Facebook
    //implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
    implementation 'com.facebook.android:facebook-android-sdk:4.39.0'
    // Twitter Android SDK (only required for Twitter LoginActivity)
    implementation files('libs/Twitter/twitter4j-core-4.0.4.jar')
    implementation('com.twitter.sdk.android:twitter-core:2.3.0@aar') {
        transitive = true
    }
    implementation('com.twitter.sdk.android:twitter:3.1.1@aar') {
        transitive = true
    }

    //pull to refresh
    implementation 'com.dinuscxj:recyclerrefreshlayout:2.0.5'

    // ML Kit dependencies
    //implementation 'com.google.firebase:firebase-ml-vision:18.0.1'
    //implementation 'com.google.firebase:firebase-ml-vision-face-model:17.0.2'
    //implementation 'com.google.firebase:firebase-ml-vision-image-label-model:17.0.2'

    //image zooming
    implementation 'com.github.chrisbanes:PhotoView:1.2.6'

    //progressbar
    implementation 'com.wang.avi:library:2.1.3'
    implementation 'com.github.castorflex.smoothprogressbar:library:1.1.0'
    //gradient button
    implementation 'com.dagang:gradient-button:1.0.1'
    //rounded button
    implementation 'com.lai:buttonStyle:1.0.2'

    implementation 'ja.burhanrashid52:photoeditor:0.3.3'

    //implementation 'eu.long1:spacetablayout:1.0.4'
    //implementation 'com.github.florent37:bubbletab:1.0.0'
    //implementation 'com.github.iammert:AnimatedTabLayout:0.1'
    implementation 'devlight.io:navigationtabbar:1.2.5'

}

apply plugin: 'com.google.gms.google-services'
//com.google.gms.googleservices.GoogleServicesPlugin.config.disableVersionCheck = true
//com.google.gms.googleservices.GoogleServicesPlugin.config.disableVersionCheck = true

